rename to saved-counter

--- a/template.yaml
+++ b/template.yaml
@@ -1,10 +1,10 @@
-AWSTemplateFormatVersion: '2010-09-09'
+AWSTemplateFormatVersion: "2010-09-09"
 Transform: AWS::Serverless-2016-10-31
 Description: >
-  savedcounter
+  saved-counter
 
-  Sample SAM Template for savedcounter
-  
+  Sample SAM Template for saved-counter
+
 # More info about Globals: https://github.com/awslabs/serverless-application-model/blob/master/docs/globals.rst
 Globals:
   Function:
