corrected delete command

--- a/package.json
+++ b/package.json
@@ -9,6 +9,6 @@
     "build": "sam build",
     "start": "sam deploy --guided",
     "start:local": "sam local invoke",
-    "clean": "aws cloudformation delete-stack --stack-name saved-counter"
+    "clean": "aws cloudformation delete-stack --stack-name saved-counter-stack"
   }
 }
