--- a/template.yaml
+++ b/template.yaml
@@ -24,6 +24,14 @@ Resources:
             Path: /hello
             Method: get
 
+  CounterDatabase:
+    Type: AWS::Serverless::SimpleTable
+    Properties:
+      PrimaryKey:
+        Name: name
+        Type: String
+      TableName: counter-table
+
 Outputs:
   # ServerlessRestApi is an implicit API created out of Events key under Serverless::Function
   # Find out more about other implicit resources you can reference within SAM
