--- a/template.yaml
+++ b/template.yaml
@@ -15,14 +15,14 @@ Resources:
     Type: AWS::Serverless::Function # More info about Function Resource: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
     Properties:
       CodeUri: counter/
-      Handler: app.lambdaHandler
+      Handler: app.graphqlHandler
       Runtime: nodejs12.x
       Events:
-        Count:
-          Type: Api # More info about API Event Source: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#api
+        AnyRequest:
+          Type: Api
           Properties:
-            Path: /counter
-            Method: get
+            Path: /graphql
+            Method: ANY
 
   CounterDatabase:
     Type: AWS::Serverless::SimpleTable
