yarn plugin import @yarnpkg/plugin-workspace-tools
use that import to run in parallel

--- a/package.json
+++ b/package.json
@@ -6,5 +6,8 @@
       "packages/client",
       "packages/server"
     ]
+  },
+  "scripts": {
+    "start": "yarn workspaces foreach -p run start"
   }
 }
