yarn pnpify --sdk
and then add setting in root
make types work with yarn 2

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
+  "typescript.tsdk": "packages/client/.vscode/pnpify/typescript/lib",
   "workbench.colorCustomizations": {
     "activityBar.background": "#926ba8",
     "activityBar.activeBorder": "#c4b59b",
