--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -38,5 +38,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "https://ogys7jrs99.execute-api.eu-north-1.amazonaws.com"
 }
