--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -15,6 +15,7 @@
     "graphql": "^14.6.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-google-login": "^5.1.0",
     "react-scripts": "3.3.1",
     "typescript": "~3.7.2"
   },
